@@ -27,6 +27,7 @@ AC_ARG_ENABLE(mt, [  --enable-mt		  Enable Multi-threading],
 LD=ld
 AC_PROG_CC
 
+
 if test -z "$PLINCL"; then
 plcandidates="pl swipl swi-prolog"
 AC_CHECK_PROGS(PL, $plcandidates, "none")
@@ -54,7 +55,7 @@ if test "$PLSHARED" = "yes"; then
   fi
 
   SO="so"				 # Default shared object extension
-  LD="gcc"				 # Default linking through gcc
+  LD="$CC"				 # Default linking through gcc
   LDSOFLAGS="-shared"			 # Create a shared object
 
   case "$OS" in
@@ -85,12 +86,6 @@ else
   SHLIB=""
 fi
 
-AC_CHECK_PROGS(MAKE, gmake make, "make")
-AC_CHECK_PROGS(ETAGS, etags ctags, ":")
-AC_PROG_INSTALL
-AC_PROG_CPP
-AC_ISC_POSIX
-AC_HEADER_STDC
 if test ! -z "$GCC"; then
     COFLAGS=-O2
     CWFLAGS=-Wall
@@ -98,6 +93,14 @@ else
     COFLAGS=-O
     CWFLAGS=
 fi
+
+
+AC_CHECK_PROGS(MAKE, gmake make, "make")
+AC_CHECK_PROGS(ETAGS, etags ctags, ":")
+AC_PROG_INSTALL
+AC_PROG_CPP
+AC_ISC_POSIX
+AC_HEADER_STDC
 CFLAGS="$CMFLAGS"
 AC_FUNC_ALLOCA
 AC_C_BIGENDIAN
@@ -110,7 +113,7 @@ AC_CHECK_LIB(nsl, t_bind,
 	     AC_DEFINE(HAVE_LIBNSL))
 AC_CHECK_LIB(crypt, crypt)
 
-AC_CHECK_HEADERS(malloc.h unistd.h sys/time.h fcntl.h)
+AC_CHECK_HEADERS(malloc.h alloca.h unistd.h sys/time.h fcntl.h)
 AC_CHECK_FUNCS(setsid strerror)
 
 AC_OUTPUT(Makefile)
